--- a/src/index.css
+++ b/src/index.css
@@ -19,10 +19,16 @@
   box-sizing: border-box;
 }
 
-html,
+html {
+  height: 100%;
+  overflow-x: clip;
+}
+
 body,
 #root {
   height: 100%;
+  max-width: 100%;
+  overflow-x: clip;
 }
 
 body {
